api/templates/default/etemplate2.css
/* ... */
/* Allow space for category color indicators, preserving column calculations */
.egwGridView_outer thead tr > th:first-child {
    border-left: 6px solid transparent;
}

.egwGridView_scrollarea tr.row_category > td:first-child, .select-cat li {
    border-left: 6px solid transparent;
}

.et2_nextmatch .egwGridView_outer .egwGridView_scrollarea tbody tr.row_category td:first-child > div {
    margin-left: -6px;
    margin-right: 2px;
    padding-left: 4px;
}

/* Left & right headers*/
.et2_nextmatch > div > .header {
    margin-top: -20px;
    border: none;
}

.nextmatch_header_row {
    width: 100%;
    padding-top: 0.2em;
    padding-bottom: 0.5em;
    position: relative;
    display: flex;
    gap: 1ex;
}

.nextmatch_header .header_count {
    padding: 0px 10px;
    border: 1px solid rgb(212, 212, 216);   /* --sl-input-border-color */
    text-align: center;
    border-radius: 3px;
    float: right;
    position: relative;
    min-width: 40px;
}

.nextmatch_header .header_count span {
    position: relative;
    top: 8px;
    font-size: 12px;
    color: gray;
}

.nextmatch_header_row .filtersContainer {
    flex: 5 1 auto;
}

.nextmatch_header_row .search > * {
    width: 12em;
}

.nextmatch_header_row > .filtersContainer > et2-select, .nextmatch_header_row > .filtersContainer > et2-select-cat {
    /* Make all filters the same size.  Otherwise they'll flex for different sized values */
    max-width: 33%;
}

.nextmatch_header_row > .header_row_right {
    order: 10;
}

.nextmatch_header_row > .header_row_right > * {
}

.et2_nextmatch .nextmatch_header {
    border: none;
    background-image: none;
    background-color: transparent;
}

.et2_nextmatch .nextmatch_header_row > div {
    display: inline-flex;
    flex-direction: row;
    gap: 1ex;
}

/* Favorites */
.nextmatch_header div[id$=favorite_wrapper] {
    position: relative;
    order: 99;
}

#nm_favorites_popup_filters .filter_id,
#nm_favorites_popup_filters .filter_value {
    width: 45%;
    display: inline-block;
}

.nextmatch_header ul.favorites {
    min-width: 30ex;
    border: 1px solid silver;
    box-shadow: 6px 6px 9px gray;
}

.ui-fav-sortable-placeholder {
    height: 24px;
    border: 1px dashed silver;
    border-radius: 2px;
    margin: 0px;
    padding: 2px 5px;
}

.nextmatch_header .favorites li .ui-menu .ui-menu-item a {
    text-indent: -22px;
    margin-left: 21px;
}

.nextmatch_header .favorites.ui-menu li.ui-menu-item a.ui-state-hover {
    margin-left: 20px;
}

.favorites li span.ui-state-active {
    border: none;
}

.favorites input,
.favorites img {
    margin-right: 1ex;
}

.favorites li.ui-menu-item img {
    width: 12px;
    height: 12px;
    margin-top: -3px;
    margin-left: 2px;
    vertical-align: middle;
}

.favorites div.ui-icon-trash {
    position: relative;
    float: right;
    display: none;
}

.favorites li:hover div.ui-icon {
    display: inline-block;
}

.favorites .sideboxstar, .favorites div.ui-icon-heart {
    height: 9px;
    display: inline-block;
    padding: 0px 4px;
    margin: -2px 5px;
    background-image: url(images/fav_filter.png);
    background-size: 9px 9px;
}

.sidebox-favorites ul.favorites {
    width: 99%;
    padding: 0px;
    border: none;
    background: white;
}

.sidebox-favorites .ui-menu .ui-menu-item a {
    line-height: inherit;
    padding: 2px 0px;
}

.sidebox-favorites .ui-menu .ui-menu-item a:hover {
    text-decoration: underline;
}

.sidebox-favorites .favorites div.ui-icon-heart {
    position: relative;
    vertical-align: middle;
    display: inline-block;
    margin: -1px 1px 0px 1px;
    height: 12px;
    width: 6px;
}

.sidebox-favorites .favorites div.ui-icon-trash {
    margin-top: -5px;
    margin-right: 4px;

    width: 14px;
    height: 14px;
    background-repeat: no-repeat;
}

ul[id$='favorites_popup_state'] span.filter_value {
    position: absolute;
    left: 50%;
    white-space: nowrap;
}

.nextmatch_sortheader {
    color: #003075;
    cursor: pointer;
    padding-right: 10px;
    margin-right: 10px;
    background-repeat: no-repeat;
    background-position: right center;
}

.nextmatch_sortheader:hover {
    text-decoration: underline;
}

.nextmatch_sortheader.asc {
    font-weight: bold;
    background-image: url(images/up.png);
}

.nextmatch_sortheader.desc {
    font-weight: bold;
    background-image: url(images/down.png);
}

.nextmatch_resize_helper {
    border-right: 1px dotted gray;
    min-height: 100%;
    background-color: gray;
    opacity: 0.5;
}

@media print {
    /** Keeps rows from breaking */
    .et2_nextmatch .egwGridView_grid > tbody > tr {
        display: block;
    }

    .et2_nextmatch .egwGridView_spacer {
        display: none;
    }

    .et2_nextmatch .nextmatch_header {
        display: none !important;
    }

    .egwGridView_outer > thead {
        border-bottom: 1px solid;
    }

    .egwGridView_outer > thead select {
        appearance: none;
        -webkit-appearance: none;
        -moz-appearance: none;
    }

    .egwGridView_grid > tbody > tr {
        page-break-inside: avoid;
        -webkit-region-break-inside: avoid;
    }

    .et2_nextmatch > div {
        width: auto !important;
        height: auto !important;
    }

    .et2_nextmatch table.egwGridView_outer thead tr th div.innerContainer {
        max-height: inherit;
    }

    #cke_1_top.cke_top {
        display: none;
        border: none;
    }

    .et2_split, .et2_split > .splitter-pane {
        height: auto !important;
        width: auto !important;
    }

    /** Show tab labels full width, with a little extra space */
    .et2_tabbox .et2_tabflag {
        width: 100%;
        padding-top: 1em;
        margin-bottom: 0.5em;
        font-size: 150%;
    }

    .et2_tabs {
        overflow: visible;
    }
}

/**
 * Grid / nextmatch Hierarchy
 */
/* Make sure arrow & cell content don't overlap */
.et2_nextmatch .egwGridView_grid span.arrow {
    margin: 6px -12px 4px 4px;
    float: left;
    position: relative;
}
/* ... */

